--- a/content/guest/ep471.md
+++ b/content/guest/ep471.md
@@ -12,7 +12,7 @@ Thumbnail = "img/guest/smuggler_400x400.jpg"
 #Pinterest = ""
 #Instagram = ""
 #YouTube = ""
-draft = "True"
+draft = "False"
 
 +++
 
