--- a/content/guest/ep471.md
+++ b/content/guest/ep471.md
@@ -2,7 +2,7 @@
 Title = "Smuggler"
 date = "2020-12-31T09:12:37-05:00"
 Twitter = "therealsmuggler?lang=en"
-Website = "https://anarplex.net/"
+Website = "http://opaque.link/"
 Type = "guest"
 #Facebook = ""
 #Linkedin = ""
